--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="images/profile.jpg" alt="Sameer Profile" class="hero-img" />
       <h1>Shaik Sameer</h1>
       <p>Fullstack Developer • FastAPI • Django • React • Cloud Deployment</p>
-      <button href="#contact" class="btn">Hire Me</button>
+      <!-- <button href="#contact" class="btn">Hire Me</button> -->
     </div>
 
     <!-- Right Side: About -->
