--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="hero-left" id='about' >
       <img src="images/profile.jpg" alt="Sameer Profile" class="hero-img" />
       <h1>Shaik Sameer</h1>
-      <p>Fullstack Developer • FastAPI • Django • React • Cloud Deployment</p>
+      <p>Fullstack Developer </p>
       <!-- <button href="#contact" class="btn">Hire Me</button> -->
     </div>
 
@@ -39,9 +39,8 @@
     <div class="hero-right">
       <h2>About Me</h2>
       <p>
-        Hi, I’m Shaik Sameer, a passionate and detail-oriented Electrical and Electronics Engineering graduate with hands-on experience in building projects around web development, APIs, and database systems. I enjoy turning ideas into real-world applications and continuously improving my skills in Python, FastAPI, JavaScript, SQL and HTML/CSS.
-        I’ve worked on projects like Digital Hotel Menu, E-commerce platforms and Portfolio development, gaining hands-on experience in clean code, scalability, and user experience. I’m also exploring React, Tailwind CSS, and AWS to strengthen my full-stack development skills.      
-        I thrive in collaborative environments, love learning new technologies.
+        I’m Shaik Sameer Basha, a passionate Full Stack Developer with 1.5 years of experience building responsive and high-performance web applications. I specialize in creating seamless user experiences using React, Next.js, and TypeScript on the frontend, and developing efficient RESTful APIs with Node.js, Express, and Python (FastAPI) on the backend. I enjoy solving real-world problems through clean, scalable code and thrive in collaborative, 
+        fast-paced environments where I can learn, adapt, and deliver impactful digital solutions.
       </p>
     </div>
   </div>
@@ -53,19 +52,77 @@
     <h2>Experience</h2>
     <div class="job">
       <h3>Fullstack Developer — Trangula Innovations Pvt. Ltd.</h3>
-      <span>Dec 2024 – Present</span>
+      <span>June 2024 – Present</span>
       <p>
-        - Enhanced and maintained scalable backend services using FastAPI and Django.<br>
-        - Built responsive web UIs with ReactJS, Tailwind CSS, and HTML/CSS.<br>
-        - Created and consumed RESTful APIs, merged third-party services, and ensured secure endpoints.<br>
-        - Deployed applications on AWS and GCP, managing CI/CD pipelines.<br>
-        - Managed PostgreSQL (via Supabase) and MongoDB databases.<br>
-        - Collaborated with cross-functional teams using Git and GitHub for code reviews and version control. <br>
-        - Worked with structured data formats like JSON and CSV, applying OOP design principles.
-      </p>
+          I have 1.5 years of hands-on experience as a Full Stack Developer, specializing in frontend development with React, Next.js, and TypeScript, along with backend expertise in Node.js, Express, and Python (FastAPI). At Trangla Innovations Pvt. Ltd, I contributed to multiple client projects, building responsive and accessible user interfaces, integrating RESTful APIs, and ensuring smooth deployment through Docker and GitHub Actions. <br>
+          I’ve developed and deployed several full-stack applications like EduManage (LMS portal), QuickService (task manager), and InventoryFlow (inventory system), each focusing on performance, accessibility, and real-world impact. My experience working in Agile teams and collaborating across the full stack has helped me grow into a developer who values both technical excellence and user experience.
+      </p>  
     </div>
   </section>
 
+  
+  <section id="skills" class="section fade-in">
+    <h2>Technical Skills</h2>
+    <div class="skills-grid">
+      <div class="skill-category">
+        <h3>Frontend</h3>
+        <p>React, Next.js, JavaScript (ES6+), TypeScript, Redux Toolkit, HTML5, CSS3, Tailwind CSS</p>
+      </div>
+      <div class="skill-category">
+        <h3>Backend</h3>
+        <p>Node.js, Express.js, Python (FastAPI), REST API Development, JWT Authentication</p>
+      </div>
+      <div class="skill-category">
+        <h3>Databases</h3>
+        <p>PostgreSQL, MySQL, Prisma ORM, Mongoose (Basic)</p>
+      </div>
+      <div class="skill-category">
+        <h3>DevOps & Deployment</h3>
+        <p>Docker, GitHub Actions (CI/CD), Vercel, Netlify, AWS EC2 (Basic)</p>
+      </div>
+      <div class="skill-category">
+        <h3>Tools & Other Skills</h3>
+        <p>Git, GitHub, Postman, Figma Integration, Responsive Web Design, Web Accessibility (a11y), Agile/Scrum</p>
+      </div>
+    </div>
+  </section>
+  
+  
+  
+  <!-- Projects -->
+  <!-- Projects -->
+  <section id="projects" class="section fade-in">
+    <h2>Projects</h2>
+    <div class="project-list">
+
+      <div class="project-card">
+        <!-- <img src="images/edumanage.png" alt="EduManage" /> -->
+        <h3>EduManage - Student Portal & LMS</h3>
+        <p>Developed a full-stack student learning platform enabling course access, assignment submissions, and grade tracking for 500+ users.</p>
+        <p>Used <strong>React</strong> and <strong>Redux Toolkit</strong> to build dynamic dashboards and <strong>Express.js</strong> with <strong>PostgreSQL</strong> for backend operations. Implemented accessibility (a11y) features to ensure inclusivity and optimized SQL queries for better data performance.</p>
+        <p><strong>Outcome:</strong> Delivered a robust and user-friendly LMS that simplified digital learning management and improved student engagement.</p>
+      </div>
+
+      <div class="project-card">
+        <!-- <img src="images/quickservice.png" alt="QuickService" /> -->
+        <h3>QuickService - Local Business Task Manager</h3>
+        <p>Built a productivity platform that helps small businesses manage and track customer service tasks in real time.</p>
+        <p>Designed with <strong>Next.js</strong> and <strong>TypeScript</strong> for a fast, SSR-enabled frontend and <strong>Python FastAPI</strong> for backend APIs handling task and customer data. Integrated responsive UI using <strong>Tailwind CSS</strong> and automated form validation for smooth workflows.</p>
+        <p><strong>Outcome:</strong> Helped local businesses digitize manual processes, reducing task tracking time by over 40%.</p>
+      </div>
+
+      <div class="project-card">
+        <!-- <img src="images/inventoryflow.png" alt="InventoryFlow" /> -->
+        <h3>InventoryFlow - SMB Inventory System</h3>
+        <p>Developed an end-to-end inventory management solution for small and medium businesses to track products, categories, and stock levels.</p>
+        <p>Implemented with <strong>React</strong> for frontend dashboards, <strong>FastAPI</strong> for backend APIs, and <strong>PostgreSQL</strong> for database design. Deployed via <strong>Docker</strong> to ensure environment consistency and scalability.</p>
+        <p><strong>Outcome:</strong> Delivered a cost-effective, real-time inventory solution that improved operational efficiency and accuracy.</p>
+      </div>
+
+    </div>
+  </section>
+
+  
   <!-- Education -->
   <section id="education" class="section fade-in">
     <h2>Education</h2>
@@ -78,48 +135,13 @@
     </div>
   </section>
 
-  <!-- Skills -->
-  <section id="skills" class="section fade-in">
-    <h2>Technical Skills</h2>
-    <div class="skills-grid">
-      <div class="skill-item">Python / FastAPI / Django</div>
-      <div class="skill-item">JavaScript / HTML / CSS</div>
-      <div class="skill-item">Databases (PostgreSQL, MongoDB)</div>
-      <div class="skill-item">ReactJS (UI development)</div>
-      <div class="skill-item">AWS / GCP Deployment</div>
-      <div class="skill-item">Git / GitHub</div>
-    </div>
-  </section>
-
-  <!-- Projects -->
-  <section id="projects" class="section fade-in">
-    <h2>Projects</h2>
-    <div class="project-list">
-      <div class="project-card">
-        <!-- <img src="images/hotel_menu.png" alt="Hotel Menu" /> -->
-        <h3>Digital Hotel Menu </h3>
-        <p>FastAPI backend with QR-based ordering, JWT auth, payments.</p>
-      </div>
-      <div class="project-card">
-        <!-- <img src="images/portfolio_builder.png" alt="Portfolio Builder" /> -->
-        <h3>Online Portfolio Template</h3>
-        <p>Platform for freshers to create responsive portfolios with CRUD APIs.</p>
-      </div>
-      <div class="project-card">
-        <!-- <img src="images/student_db.png" alt="Student DB" /> -->
-        <h3>Student Database Management</h3>
-        <p>CRUD system for managing student info using FastAPI & Supabase.</p>
-      </div>
-    </div>
-  </section>
-
   <!-- Contact -->
   <section id="contact" class="section fade-in">
     <h2>Contact Me</h2>
     <p>Shaik Sameer Basha</p>
     <p>Email: <a href="mailto:sameershaik16481@gmail.com">sameershaik16481@gmail.com</a></p>
     <p>Phone: +91 79972 94523</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sameer-basha-shaik-112965255" target="_blank">sameer-basha-shaik</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/sameer-basha-shaik-112965255 " target="_blank">sameer-basha-shaik</a></p>
     <p>GitHub: <a href="https://github.com/sameershaik16481" target="_blank">sameershaik16481</a></p>
   </section>
 
